<resources>
    <string name="app_name">UI_Yenveez</string>
    <string name="user_name">Username</string>
    <string name="e_mail">email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signup_button">Join us</string>
    <string name="signin_text">Sign in</string>
    <string name="signup_text">Sign up</string>
    <string name="energy">Total energy generated</string>
    <string name="points">Total Veez Points</string>
    <string name="stat">Congrats username!!! you have energized a 10W bulb for 125 seconds.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment">first fragment</string>
    <string name="welcome">Hey, welcome!!!
you are one step closer to
becoming a green warrior.</string>
    <string name="intro_2ndpara">Now, your footsteps will
generate electricity. This
is your opportunity to
contribute towards a cleaner
world.</string>
    <string name="intro_3rdpara">You will be creating a
cleaner and better world for
the next generation. You
will also be rewarded with
coupons, offers, points and
a lot more.</string>
    <string name="intro_4thpara">All you have to do is.
Just walk, jump, run on
Yenveez Floor tiles.</string>
    <string name="intro_5thpara">Let\'s start our journey towards
a cleaner and better world.</string>
</resources>