<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/combinedbackground"
    tools:context=".Signup">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@drawable/blacklogo1"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/loginBox"
        android:layout_width="500dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/loginbox" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.01999998"
        app:srcCompat="@drawable/tagline"
        tools:ignore="ContentDescription"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:background="@drawable/maskgroup1"
        android:hint="@string/user_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/loginBox"
        app:layout_constraintVertical_bias="0.22000003"
        />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toTopOf="@+id/username"
        app:srcCompat="@drawable/user"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:background="@drawable/maskgroup1"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@id/loginBox"
        app:layout_constraintEnd_toEndOf="@id/loginBox"
        app:layout_constraintStart_toStartOf="@id/loginBox"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintVertical_bias="0.120000005" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/email"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toTopOf="@+id/email"
        app:srcCompat="@drawable/email"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/maskgroup1"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@id/loginBox"
        app:layout_constraintEnd_toEndOf="@id/loginBox"
        app:layout_constraintStart_toStartOf="@id/loginBox"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintVertical_bias="0.120000005" />

    <ImageView
        android:id="@+id/padlockPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="@+id/password"
        app:srcCompat="@drawable/padlock"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:background="@drawable/maskgroup1"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toBottomOf="@id/loginBox"
        app:layout_constraintEnd_toEndOf="@id/loginBox"
        app:layout_constraintStart_toStartOf="@id/loginBox"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintVertical_bias="0.120000005" />

    <ImageView
        android:id="@+id/padlockConfirmPassword"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/confirmPassword"
        app:layout_constraintEnd_toEndOf="@+id/confirmPassword"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintStart_toStartOf="@+id/confirmPassword"
        app:layout_constraintTop_toTopOf="@+id/confirmPassword"
        app:srcCompat="@drawable/padlock"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/signinbutton"
        android:text="@string/signup_button"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/loginBox"
        app:layout_constraintEnd_toEndOf="@+id/loginBox"
        app:layout_constraintStart_toStartOf="@+id/loginBox"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"
        app:layout_constraintVertical_bias="0.00999999" />

</androidx.constraintlayout.widget.ConstraintLayout>