<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background"
    tools:context=".HomePage">


    <ImageView
        android:id="@+id/homeGreenIcons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00999999"
        app:srcCompat="@drawable/homepagegreenicons"
        tools:ignore="contentDescription" />

    <ImageView
        android:id="@+id/homepageProfileBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/homepageprofilebox"
        tools:ignore="contentDescription" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/homepageWaveBackground"
        android:layout_width="548dp"
        android:layout_height="606dp"

        android:layout_marginTop="160dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/wavebackground" />

    <ImageView
        android:id="@+id/homepageProfileFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toTopOf="@id/homeGreenIcons"
        app:layout_constraintVertical_bias="0.25"
        app:srcCompat="@drawable/homepageprofilephotoframe"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/homepageUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="TextView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageProfileFrame"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepageRank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageUsername"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepageLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageRank"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepageDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageLocation"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepageEnergy"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/energy"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageDescription"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepagePoints"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/points"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageDescription"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepageEnergyScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="250"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageEnergy"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepageVeezPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="250"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepagePoints"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/homepageStat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comic_neue_bold"
        android:text="@string/stat"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@+id/homepageProfileBox"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="@+id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageDescription"
        app:layout_constraintVertical_bias="0.41000003" />

    <ImageView
        android:id="@+id/instaShare"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/homepageProfileBox"
        app:layout_constraintEnd_toEndOf="@id/homepageProfileBox"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="@id/homepageProfileBox"
        app:layout_constraintTop_toBottomOf="@+id/homepageStat"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/homepageinstagramicon" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_menu" />



</androidx.constraintlayout.widget.ConstraintLayout>